--- a/index.html
+++ b/index.html
@@ -25,35 +25,143 @@
     <main>
         <section class="container">
             <div class="top-players">
-                <h2 class="section-title">Top players</h2>
-                <div class="players">
-                    <div class="player">
-                        <img src="images/players/player-1.png" alt="">
-                        <h2 class="player-name">Top player-1</h2>
+                <h1 class="section-title">Top players</h2>
+                    <div class="players">
+                        <div class="player">
+                            <img src="images/players/player-1.png" alt="">
+                            <h3 class="player-name">Top player-1</h2>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-2.png" alt="">
+                            <h3 class="player-name">Top player-2</h2>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-3.png" alt="">
+                            <h3 class="player-name">Top player-3</h2>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-4.png" alt="">
+                            <h3 class="player-name">Top player-4</h2>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-5.png" alt="">
+                            <h3 class="player-name">Top player-5</h2>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-6.png" alt="">
+                            <h3 class="player-name">Top player-6</h2>
+                        </div>
                     </div>
-                    <div class="player">
-                        <img src="images/players/player-2.png" alt="">
-                        <h2 class="player-name">Top player-2</h2>
+            </div>
+            <hr>
+            <!-- top blogs -->
+            <div class="top-blog">
+                <h1 class="section-title">Top blogs</h2>
+                    <div class="blogs">
+                        <div class="blog">
+                            <div class="blog-thumbnail"><img src="images/blogs/blog-1.png" alt=""></div>
+                            <div class="blog-info">
+                                <h2>jo sksdjos siiddiufdiuiosn</h2>
+                                <p>by <a href="">Moyen</a></p>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            <div class="blog-thumbnail"><img src="images/blogs/blog-2.png" alt=""></div>
+                            <div class="blog-info">
+                                <h2>jo sksdjos siiddiufdiuiosn</h2>
+                                <p>by <a href="">Moyen</a></p>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            <div class="blog-thumbnail"><img src="images/blogs/blog-3.png" alt=""></div>
+                            <div class="blog-info">
+                                <h2>jo sksdjos siiddiufdiuiosn</h2>
+                                <p>by <a href="">Moyen</a></p>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            <div class="blog-thumbnail"><img src="images/blogs/blog-4.png" alt=""></div>
+                            <div class="blog-info">
+                                <h2>jo sksdjos siiddiufdiuiosn</h2>
+                                <p>by <a href="">Moyen</a></p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="player">
-                        <img src="images/players/player-3.png" alt="">
-                        <h2 class="player-name">Top player-3</h2>
+            </div>
+        </section>
+        <section class="container">
+            <h2 class="section-title">Top courses</h2>
+            <div class="top-courses">
+                <div class="course">
+                    <div class="corse-thumbnail">
+                        <img src="images/courses/course-1.png">
                     </div>
-                    <div class="player">
-                        <img src="images/players/player-4.png" alt="">
-                        <h2 class="player-name">Top player-4</h2>
+                    <div class="course-detail">
+                        <h2>keno tomar ki hoyeche go,</h2>
+                        <p>by <a href="">Moyen</a></p>
                     </div>
-                    <div class="player">
-                        <img src="images/players/player-5.png" alt="">
-                        <h2 class="player-name">Top player-5</h2>
+                    <div class="course-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                            <span>4.5</span>
+                        </div>
+                        <div class="duration">
+                            <i class="far fa-clock"></i>
+                            <span>1:30hr</span>
+                        </div>
                     </div>
-                    <div class="player">
-                        <img src="images/players/player-6.png" alt="">
-                        <h2 class="player-name">Top player-6</h2>
+                </div>
+                <div class="course">
+                    <div class="corse-thumbnail">
+                        <img src="images/courses/course-2.png">
+                    </div>
+                    <div class="course-detail">
+                        <h2>ki sundor lagere amar to valo lagena</h2>
+                        <p>by <a href="">Moyen</a></p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                            <span>4.5</span>
+                        </div>
+                        <div class="duration">
+                            <i class="far fa-clock"></i>
+                            <span>1:30hr</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="corse-thumbnail">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h2>kono ekdiun edesher akashe</h2>
+                        <p>by <a href="">Moyen</a></p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                            <span>4.5</span>
+                        </div>
+                        <div class="duration">
+                            <i class="far fa-clock"></i>
+                            <span>1:30hr</span>
+                        </div>
                     </div>
                 </div>
             </div>
-            <hr>
         </section>
     </main>
 </body>
