--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section class="container">
             <div class="top-players">
-                <h1 class="section-title">Top players</h2>
+                <h1 id="top-players" class="section-title">Top players</h2>
                     <div class="players">
                         <div class="player">
                             <img src="images/players/player-1.png" alt="">
